<resources>
    <string name="app_name">FirstSubmission</string>
    <string name="text_title">Github Users</string>
    <string name="text_user_avatar">User Avatar</string>
    <string name="text_default_username">Default Username</string>
    <string name="text_default_name">Default Name</string>
    <string name="text_default_location">Default Location</string>
    <string name="text_default_company">Default Company</string>
    <string name="text_number">00</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_repositories">Repositories</string>
    <string name="btn_return_back">Return to User Lists</string>
    <string name="text_github_profile">Go to Github Profile</string>

    <string-array name="username">
        <item>daffakurnia11</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
        <item>JakeWharton</item>
    </string-array>

    <string-array name="name">
        <item>Daffa Kurnia Fatah</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
        <item>Jake Wharton</item>
    </string-array>

    <string-array name="location">
        <item>Sidoarjo, Jawa Timur, Indonesia</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
        <item>Pittsburgh, PA, USA</item>
    </string-array>

    <integer-array name="repository">
        <item>43</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
        <item>102</item>
    </integer-array>

    <string-array name="company">
        <item>Breakpoint.id</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
        <item>Google, Inc.</item>
    </string-array>

    <integer-array name="followers">
        <item>8</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
        <item>56995</item>
    </integer-array>

    <integer-array name="following">
        <item>4</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
        <item>12</item>
    </integer-array>

    <integer-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
        <item>@drawable/user11</item>
    </integer-array>
</resources>